ログインフォーム・講習会ページを追加

--- a/web/base.html
+++ b/web/base.html
@@ -6,13 +6,12 @@
     <!-- css -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lecture/style.css">
 	<link rel="stylesheet" href="css/github.css">
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Java Script -->
@@ -22,10 +21,11 @@
 
     <title>テンプレート</title>
 </head>
+
 <body onload="PR.prettyPrint()">
     <div id="header_set">
         <header id="header">
-            <h1 id="header_logo"><a href="/">NIT-KCP</a></h1>
+            <h1 id="header_logo"><a href="/">NIT-KPC</a></h1>
             <nav id="global_navi">
                 <ul>
                     <!-- <li><a href="login_form.php">ログイン</a></li> -->
