--- a/web/unix/unix.html
+++ b/web/unix/unix.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=2">
     <!-- css -->
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/github.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/lecture/style.css">
+	<link rel="stylesheet" href="../css/github.css">
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;600&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
 <body onload="PR.prettyPrint()">
     <div id="header_set">
         <header id="header">
-            <h1 id="header_logo"><a href="/">NIT-KCP</a></h1>
+            <h1 id="header_logo"><a href="/">NIT-KPC</a></h1>
             <nav id="global_navi">
                 <ul>
                     <!-- <li><a href="login_form.php">ログイン</a></li> -->
@@ -81,7 +81,7 @@
                 <h3>Linux</h3>
                 <p><span class="bold">Linux(リナックス)</span>は、1991年に学生だったLinus Benedict Torovalds氏が開発した、Unix系(Unix like)のOS。LinuxはUNIXと同等の機能を備えつつ、<span class="bold">オープンソース</span>(自由に入手、使用、開発、改変、再配布ができる)であることが特徴。その後、世界中の開発者たちのボランティアによって開発・維持を続け、オリジナルのLinuxを元に各開発者がカスタマイズした<span class="bold">ディトリビューション</span>が数多く配布されていった。</p>   
             </div>
-            <img src="img/unix/os.png">
+            <img src="../img/unix/os.png">
             <div class="glossary">
                 <h3 class="glossary_title"><i class="material-icons">auto_stories</i>用語集</h3>
                 <div class="text_box">
@@ -125,7 +125,7 @@ main:
                 <h3>CUI</h3>
                 <p><span class="bold">CUI(Character User Interface)</span>とは、キャラクタ(文字)で表現されるUIのこと。マウスで操作するGUIとは異なり、CUIはキーボードでコマンドを入力して操作する。以降、この記事ではCUIを使用する。</p>
             </div>
-            <img src="img/unix/gui_cui.png">
+            <img src="../css/">
 
 
             <h1 id="heading3">ファイルツリーとは</h1>
@@ -141,7 +141,7 @@ main:
                 <div class="caution_title"><i class="material-icons">warning_amber</i><h3>CAUTION</h3></div>
                 <p>実際は、OSのファイルシステム上では<span class="bold">ディレクトリも通常のファイル</span>である。属性がディレクトリとなっているだけで、中身にはファイルの管理情報などが格納されている。本題から外れてしまうため詳しい内容は説明しないが、興味のある人はインターネットや書籍で調べてみよう。</p>
             </div> 
-            <img src="img/unix/dir_file.png">
+            <img src="../img/unix/dir_file.png">
 
             <div class="text_box"></div>
             <div class="tips_box">
