--- a/web/index.html
+++ b/web/index.html
@@ -201,7 +201,7 @@
                     <p>プログラミング研究会で学べるのは、プログラミング言語だけではありません。ゲーム作成やサーバー構築、Webサイトの制作、さらには情報の専門科目から数学・物理まで...<br>仲間が増えるほど、研究会全体の知識量が増えていきます。</p>
                 </section>
                 <div class="img_container">
-                    <img id="text_mining" src="img/toppage/text_mining.png">
+                    <img id="text_mining" src="img/toppage/text_minings.png">
                 </div>
             </article>
 
@@ -292,9 +292,8 @@
                 <h3>PORTAL</h3>
                 <ul>
                     <li><a href="https://www.kushiro-ct.ac.jp">釧路高専 公式ウェブサイト</a></li>
-                    <li><a href="https://sites.google.com/view/kpc-nitkc/home?authuser=4">旧 プロ研 ホームページ</a></li>
-                    <li><a href="https://github.co.jp">GitHub</a></li>
-                    <li><a href="css/toppage/main_visual.css">main_visual.css</a></li>
+                    <li><a href="https://knct-kpc.github.io">旧 プロ研 ホームページ</a></li>
+                    <li><a href="https://procon.946oss.net">U-16プログラミングコンテスト 釧路大会</a></li>
                 </ul>
             </div>
             <div id="footer_navi">
